--- a/TODO
+++ b/TODO
@@ -59,6 +59,7 @@
 - set-remain-on-exit is a bit of a hack, some way to do it generically?
 - set-option should be set-session-option and should be overall global options
   for stuff like mode keys?
+      also quiet, utf8 and maybe other flags?
 - clear window title on exit
 - refer to windows by name etc (duplicates? fnmatch?)
 - the output code (tty.c) could do with optimisation depending on term
