new layout plan

--- a/TODO
+++ b/TODO
@@ -68,6 +68,7 @@
   to avoid quoting
 
 (hopefully) for 0.9, in no particular order:
+- key to goto line in copy/scroll modes
 - a command to display the status line briefly when it is turned off
 - FAQ "Can I have some examples of cool things I can do with tmux?" -- linkw,
   more??
@@ -79,11 +80,14 @@
 - key to switch to copy mode from scroll mode
 - attach should have a flag to create session if it doesn't exist
 - layout/split stuff:
-     what to do about manual mode?
-     	  - two independent manual modes: vertical and horizontal?
-	  - proper grid mode? (hard)
+	  ** NEW layout design:
+	     1. finish rewrite manual with tree of layout_cell
+	     	(resize can be recursive?)
+	     2. convert automatic layout modes to produce a tree
+	     3. move any size/position details from window_pane to layout_cell
+	     4. a way to address panes by name ("top-left") and position ("0,0")
 - test bug sshing from freebsd console (tom iirc?)
-- document manual-vertical changes
+- document manual-vertical changes XXX this will change again...
 - document main-pane-width and main-pane-height and main-horizontal
 - document clear-history
 - document paste in status line
