spawn login shells by default, adapt manpage bits as well. ok nicm@

--- a/tmux.1
+++ b/tmux.1
@@ -947,7 +947,7 @@ Set the command used for new windows (if not specified when the window is
 created) to
 .Ar command .
 The default is
-.Dq exec $SHELL .
+.Dq exec $SHELL -l .
 .It Ic default-path Ar path
 Set the default working directory for processes created from keys, or
 interactively from the prompt.
