undo a mistake found by sobrado;

--- a/tmux.1
+++ b/tmux.1
@@ -158,10 +158,13 @@ ambiguous command: n, could be: new-session, new-window, next-window
 .Ed
 .Pp
 Within an active session, a new window may be created by typing
-.Ql C-b
-(Ctrl, known as the prefix key,
+.Ql C-b c
+(Ctrl
 followed by the
 .Ql b
+key
+followed by the
+.Ql c
 key).
 .Pp
 Windows may be navigated with:
