Do not set the window title by default (make set-titles option default to off), wiping over the title is rude and annoying. Agreed by several.

--- a/tmux.1
+++ b/tmux.1
@@ -1084,7 +1084,7 @@ window option for any windows first created in this session.
 .Xc
 Attempt to set the window title using the \ee]2;...\e007 xterm code and
 the terminal appears to be an xterm.
-This option is enabled by default.
+This option is off by default.
 Note that elinks
 will only attempt to set the window title if the STY environment
 variable is set.
