Mention LC_ALL, LC_CTYPE.

--- a/tmux.1
+++ b/tmux.1
@@ -109,10 +109,13 @@ flag is ignored.
 Unlock the server.
 .It Fl u
 .Nm
-attempts to guess if the terminal is likely to support UTF-8 by checking
-the
+attempts to guess if the terminal is likely to support UTF-8 by checking the
+first of the
+.Ev LC_ALL ,
+.Ev LC_CTYPE
+and
 .Ev LANG
-environment variable for the string "UTF-8".
+environment variables to be set for the string "UTF-8".
 This is not always correct: the
 .Fl u
 flag explicitly informs
