Change find-window and monitor-content to use fnmatch(3). For convenience and compatibility, *s are implicitly added at the start and end of the pattern.
Also display the line number and the entire line in the results, and lose the
nasty section_string function and the now empty util.c file.

Initially from Tiago Cunha.

--- a/tmux.1
+++ b/tmux.1
@@ -664,7 +664,9 @@ Move down a pane.
 .Ar match-string
 .Xc
 .D1 (alias: Ic findw )
-Search for
+Search for the
+.Xr fnmatch 3
+pattern
 .Ar match-string
 in window names, titles, and visible content (but not history).
 If only one window is matched, it'll be automatically selected, otherwise a
@@ -1316,6 +1318,8 @@ Windows with activity are highlighted in the status line.
 .Xc
 Monitor content in the window.
 When
+.Xr fnmatch 3
+pattern
 .Ar match-string
 appears in the window, it is highlighted in the status line.
 .It Xo Ic remain-on-exit
